--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1>This is first code for github</h1>
+    <p>ahare bujtaci na kicu</p>
+    <ul>
+      <li>Hello</li>
+    </ul>
   </body>
 </html>
